[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker-cli"
version = "0.1.0"
description = "A simple CLI Expense Tracker"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[project.scripts]
expense-tracker = "main:main"
