[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker-cli"
version = "0.1.0"
description = "A simple CLI Expense Tracker"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tabulate>=0.9.0",
]

[tool.setuptools]
packages = ["expense_tracker"]
package_dir = {"" = "src", "expense_tracker": "src/expense_tracker"}

[project.scripts]
expense-tracker = "main:main"